// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aliases is truthy 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-center extra_padding"
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-center section_padding layout-padding"
  >
    <div
      className="flex-100 layout-row layout-align-start-stretch username_title"
    >
      <div
        className="layout-row flex-none layout-align-center-center"
      >
        <i
          className="fa fa-user clip bigProfile"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
            }
          }
        />
      </div>
      <div
        className="layout-align-start-center layout-row flex"
      >
        <p>
          Hello,
           
        </p>
        <h1
          className="flex-none cli"
        >
          John
           
          Doe
        </h1>
      </div>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-center section "
  >
    <div
      className="flex-100 layout-row layout-wrap layout-align-space-between-stretch"
    >
      <GreyBox
        borderStyle=""
        content={
          <div
            className="layout-row flex-100"
          >
            <EditProfileBox
              close={[Function]}
              handleChange={[Function]}
              hide={true}
              onSave={[Function]}
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                }
              }
              t={[Function]}
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
              user={Object {}}
            />
            <ProfileBox
              edit={[Function]}
              handlePasswordChange={[Function]}
              hide={false}
              hideEdit={true}
              passwordResetRequested={false}
              passwordResetSent={false}
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                }
              }
              t={[Function]}
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
              user={
                Object {
                  "company_name": "FOO_COMPANY",
                  "currency": "EUR",
                  "email": "foo@bar.baz",
                  "first_name": "John",
                  "guest": false,
                  "last_name": "Doe",
                  "phone": "6345789",
                  "role": Object {
                    "name": "shipper",
                  },
                  "role_id": 1,
                }
              }
            />
          </div>
        }
        contentClassName="layout-row flex"
        flex={0}
        flexGtLg={0}
        flexMd={0}
        fullWidth={false}
        isBox={false}
        padding={false}
        title=""
        titleAction={false}
        wrapperClassName="flex layout-row layout-align-start-center"
      />
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start"
  >
    <div
      className="flex-gt-sm-50 flex-100 layout-row layout-wrap layout-align-start-center section_padding card_padding_right section "
    >
      <div
        className="flex-100 layout-align-start-center greyBg"
      >
        <span>
          <b>
            Aliases
          </b>
        </span>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-space-between-stretch"
      >
        <div
          className="pointy tile_padding layout-row layout-align-center-stretch flex-45 margin_bottom"
          key="addNewAliasButton"
          onClick={[Function]}
        >
          <div
            className="location-box new-address layout-row layout-align-start-center layout-wrap"
          >
            <div
              className="layout-row layout-align-center flex-100"
            >
              <div
                className="plus-icon"
              />
            </div>
            <div
              className="layout-row layout-align-center flex-100"
            >
              <h3>
                Add Alias
              </h3>
            </div>
          </div>
        </div>
        <AdminClientTile
          client={
            Object {
              "foo": 0,
            }
          }
          deleteFn={[Function]}
          deleteable={true}
          flexClasses="flex-45"
          handleClick={null}
          handleCollapser={null}
          navFn={null}
          showTooltip={false}
          t={[Function]}
          target=""
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
          tooltip=""
        />
        <AdminClientTile
          client={
            Object {
              "bar": 1,
            }
          }
          deleteFn={[Function]}
          deleteable={true}
          flexClasses="flex-45"
          handleClick={null}
          handleCollapser={null}
          navFn={null}
          showTooltip={false}
          t={[Function]}
          target=""
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
          tooltip=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-center extra_padding"
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-center section_padding layout-padding"
  >
    <div
      className="flex-100 layout-row layout-align-start-stretch username_title"
    >
      <div
        className="layout-row flex-none layout-align-center-center"
      >
        <i
          className="fa fa-user clip bigProfile"
          style={
            Object {
              "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
            }
          }
        />
      </div>
      <div
        className="layout-align-start-center layout-row flex"
      >
        <p>
          Hello,
           
        </p>
        <h1
          className="flex-none cli"
        >
          John
           
          Doe
        </h1>
      </div>
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-center section "
  >
    <div
      className="flex-100 layout-row layout-wrap layout-align-space-between-stretch"
    >
      <GreyBox
        borderStyle=""
        content={
          <div
            className="layout-row flex-100"
          >
            <EditProfileBox
              close={[Function]}
              handleChange={[Function]}
              hide={true}
              onSave={[Function]}
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                }
              }
              t={[Function]}
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
              user={Object {}}
            />
            <ProfileBox
              edit={[Function]}
              handlePasswordChange={[Function]}
              hide={false}
              hideEdit={true}
              passwordResetRequested={false}
              passwordResetSent={false}
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                }
              }
              t={[Function]}
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
              user={
                Object {
                  "company_name": "FOO_COMPANY",
                  "currency": "EUR",
                  "email": "foo@bar.baz",
                  "first_name": "John",
                  "guest": false,
                  "last_name": "Doe",
                  "phone": "6345789",
                  "role": Object {
                    "name": "shipper",
                  },
                  "role_id": 1,
                }
              }
            />
          </div>
        }
        contentClassName="layout-row flex"
        flex={0}
        flexGtLg={0}
        flexMd={0}
        fullWidth={false}
        isBox={false}
        padding={false}
        title=""
        titleAction={false}
        wrapperClassName="flex layout-row layout-align-start-center"
      />
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start"
  >
    <div
      className="flex-gt-sm-50 flex-100 layout-row layout-wrap layout-align-start-center section_padding card_padding_right section "
    >
      <div
        className="flex-100 layout-align-start-center greyBg"
      >
        <span>
          <b>
            Aliases
          </b>
        </span>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-space-between-stretch"
      >
        <div
          className="pointy tile_padding layout-row layout-align-center-stretch flex-45 margin_bottom"
          key="addNewAliasButton"
          onClick={[Function]}
        >
          <div
            className="location-box new-address layout-row layout-align-start-center layout-wrap"
          >
            <div
              className="layout-row layout-align-center flex-100"
            >
              <div
                className="plus-icon"
              />
            </div>
            <div
              className="layout-row layout-align-center flex-100"
            >
              <h3>
                Add Alias
              </h3>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`state.editBool is true 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-center extra_padding"
>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-center section_padding layout-padding"
  >
    <EditNameBox
      handleChange={[Function]}
      handlePasswordChange={[Function]}
      user={Object {}}
    />
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-center section "
  >
    <div
      className="flex-100 layout-row layout-wrap layout-align-space-between-stretch"
    >
      <GreyBox
        borderStyle=""
        content={
          <div
            className="layout-row flex-100"
          >
            <EditProfileBox
              close={[Function]}
              handleChange={[Function]}
              hide={false}
              onSave={[Function]}
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                }
              }
              t={[Function]}
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
              user={Object {}}
            />
            <ProfileBox
              edit={[Function]}
              handlePasswordChange={[Function]}
              hide={true}
              hideEdit={true}
              passwordResetRequested={false}
              passwordResetSent={false}
              style={
                Object {
                  "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
                }
              }
              t={[Function]}
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
              user={
                Object {
                  "company_name": "FOO_COMPANY",
                  "currency": "EUR",
                  "email": "foo@bar.baz",
                  "first_name": "John",
                  "guest": false,
                  "last_name": "Doe",
                  "phone": "6345789",
                  "role": Object {
                    "name": "shipper",
                  },
                  "role_id": 1,
                }
              }
            />
          </div>
        }
        contentClassName="layout-row flex"
        flex={0}
        flexGtLg={0}
        flexMd={0}
        fullWidth={false}
        isBox={false}
        padding={false}
        title=""
        titleAction={false}
        wrapperClassName="flex layout-row layout-align-start-center"
      />
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-wrap layout-align-start-start"
  >
    <div
      className="flex-gt-sm-50 flex-100 layout-row layout-wrap layout-align-start-center section_padding card_padding_right section "
    >
      <div
        className="flex-100 layout-align-start-center greyBg"
      >
        <span>
          <b>
            Aliases
          </b>
        </span>
      </div>
      <div
        className="flex-100 layout-row layout-wrap layout-align-space-between-stretch"
      >
        <div
          className="pointy tile_padding layout-row layout-align-center-stretch flex-45 margin_bottom"
          key="addNewAliasButton"
          onClick={[Function]}
        >
          <div
            className="location-box new-address layout-row layout-align-start-center layout-wrap"
          >
            <div
              className="layout-row layout-align-center flex-100"
            >
              <div
                className="plus-icon"
              />
            </div>
            <div
              className="layout-row layout-align-center flex-100"
            >
              <h3>
                Add Alias
              </h3>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`user is falsy 1`] = `""`;
